# peacemaiker

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  environment.yml  pyproject.toml  setup.cfg
src/: __init__.py  app.py
src/models/: viewpoint.py
src/services/: summary.py
src/utils/: __init__.py  example_answers.py
tests/: conftest.py
tests/e2e/: test_app.py
tests/unit/: test_summary.py  test_viewpoint.py
