[project]
name = "peacemaiker"
version = "0.1.0"
description = ""
authors = [
    {name = "pandego",email = "7780875+pandego@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "huggingface-hub (>=0.27.1,<0.28.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pydantic (>=2.5.3,<3.0.0)",
    "pydantic-ai (>=0.0.4,<1.0.0)",
    "pytest (>=7.4.3,<8.0.0)",
    "pytest-asyncio (>=0.23.3,<0.24.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"
pre-commit = "^4.0.1"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"
pythonpath = ["."]
